--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,15 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.5",
-    "@mui/material": "^6.4.7",
+    "@mui/material": "^6.4.10",
     "framer-motion": "^12.6.2",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
-    "react-router-dom": "^6.27.0",
+    "react-router-dom": "^6.30.0",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
