--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,8 @@
         "dev": "nodemon server.js"
     },
     "dependencies": {
+        "@google/generative-ai": "^0.24.1",
+        "@mui/icons-material": "^7.1.0",
         "bcrypt": "^5.1.1",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
@@ -15,9 +17,12 @@
         "express": "^4.21.2",
         "express-validator": "^7.2.0",
         "helmet": "^8.0.0",
+        "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.2",
-        "pg": "^8.14.1"
+        "openai": "^4.103.0",
+        "pg": "^8.14.1",
+        "react-toastify": "^11.0.5"
     },
     "devDependencies": {
         "nodemon": "^3.1.9"
